gcc/testsuite/rust/rustc/ui/error-codes/E0059.rs
#![feature(unboxed_closures)]

fn foo<F: Fn<i32>>(f: F) -> F::Output { f(3) } // { dg-error ".E0059." "" { target *-*-* } }

fn main() {
}

